--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Sign Up Form Project</h1>
     <div class="login-box">
         <h2></h2>
+        <div class="logo"></div>
         <form>
           <div class="user-box">
             <input type="text" name="" required="">
