adjusting animation on button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Sign Up Form Project</h1>
     <div class="login-box">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
         <h2></h2>
         <div class="logo"></div>
         <form>
