more color changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Sign Up Form Project</h1>
+    <div class="header-box">
+      <h1>Sign Up Form Project</h1>
+    </div>
     <div class="login-box">
       <span></span>
       <span></span>
